# autoscout24_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: refactoring-plan.md
src/: .dockerignore  Dockerfile  dashboard.py  dataset.py  functions.py  home.py  ml_functions.py  ml_modell.py  welcome.py
src/autoscout24/: __init__.py  config.py
src/autoscout24/app/: __init__.py  dashboard_page.py  dataset_page.py  main.py  modeling_exports.py  modeling_page.py  modeling_sections.py  modeling_state.py  welcome_page.py
src/autoscout24/data/: __init__.py  cleaning.py  io.py  schema.py
src/autoscout24/exploration/: __init__.py  charts.py  service.py
src/autoscout24/features/: __init__.py  engineering.py
src/autoscout24/modeling/: __init__.py  config.py  evaluation.py  registry.py  service.py  tuning.py
tests/: test_data_cleaning.py  test_data_io.py  test_exploration_charts.py  test_exploration_service.py  test_features.py  test_modeling_evaluation.py  test_modeling_service.py  test_modeling_state.py  test_modeling_tuning.py  test_registry.py
