[project]
name = "autoscout24"
version = "0.1.0"
description = "Streamlit app for vehicle price analysis and prediction."
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.11,<0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
